Fixing skills section on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -498,7 +498,7 @@ li {
     .technology-section {
         text-align: center;
         padding: 20px;
-        height: 130vh;
+        height: 100vh;
     }
 
     .skills-container {
@@ -531,7 +531,7 @@ li {
     }
 
     li {
-        font-size: 16px;
+        font-size: 14px;
         margin-bottom: 10px;
         position: relative;
         padding-left: 0px;
@@ -615,7 +615,7 @@ li {
 }
 
 .proj-imgbx:hover .proj-txtx,
-.proj-imgbx.active .proj-txtx { /* Dodano .proj-imgbx.active */
+.proj-imgbx.active .proj-txtx { 
     top: 50%;
     opacity: 1;
 }
